--- a/CFD/Project_2_Lid/references.bib
+++ b/CFD/Project_2_Lid/references.bib
@@ -39,6 +39,18 @@ doi = {10.1111/j.1745-3933.2007.00389.x},
 URL = {http://dx.doi.org/10.1016/j.aej.2016.09.013},
 }
 
+@article{salih,
+author = {Salih A.},
+title = {Streamfunction-Vorticity Formulation},
+year = {2013},
+}
+
+@article{agarwal,
+author = {Agarwal R.K.},
+title = {A Third-Order-Accurate Upwind Scheme for Navier-Strokes Solutions at High Reynolds Numbers},
+year = {1981},
+}
+
 @article{ghia,
 author = {Ghia U., Ghia K.N. and Shin C.T.},
 title = {High-Re Solutions for Incompressible Flow Using the Navier-Strokes Equation and a Multigrid Method },
